crates/antlr-rust-runtime/src/snapshots/antlr4_runtime__tree_pattern__tests__split_interleaves_text_and_tags.snap
---
source: crates/antlr-rust-runtime/src/tree_pattern.rs
expression: chunks
---
[
    Tag {
        name: "ID",
        label: None,
    },
    Text(
        " = ",
    ),
    Tag {
        name: "expr",
        label: None,
    },
    Text(
        " ;",
    ),
]
