crates/antlr-rust-runtime/src/snapshots/antlr4_runtime__tree_pattern__tests__split_no_tags.snap
---
source: crates/antlr-rust-runtime/src/tree_pattern.rs
expression: chunks
---
[
    Text(
        "a = 3 ;",
    ),
]
