crates/antlr-rust-runtime/src/snapshots/antlr4_runtime__tree_pattern__tests__split_parses_labeled_tags.snap
---
source: crates/antlr-rust-runtime/src/tree_pattern.rs
expression: chunks
---
[
    Tag {
        name: "ID",
        label: Some(
            "lhs",
        ),
    },
    Text(
        " = ",
    ),
    Tag {
        name: "expr",
        label: Some(
            "e",
        ),
    },
]
