crates/antlr-rust-runtime/src/snapshots/antlr4_runtime__tree_pattern__tests__split_strips_escapes.snap
---
source: crates/antlr-rust-runtime/src/tree_pattern.rs
expression: chunks
---
[
    Text(
        "a < b ",
    ),
    Tag {
        name: "ID",
        label: None,
    },
    Text(
        " c > d",
    ),
]
